# cli-compress

./: README.md  compress.py  pyproject.toml  test_compress.py
.github/workflows/: publish.yml
cli_compress.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
